--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 4173"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.0",
     "vite": "^5.4.0"
   }
 }
