--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "vaubia",
-  "version": "1.0.0",
   "private": true,
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port 4173"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
-    "vite": "^5.4.0"
+    "vite": "^5.4.10"
   }
 }
