--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vaubia",
+  "name": "vaubia-v5",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -11,7 +11,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
