--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "vaubia",
   "version": "1.0.0",
+  "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -8,10 +10,11 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
-    "vite": "^4.0.0",
-    "@vitejs/plugin-react": "^3.0.0"
+    "vite": "^5.4.9",
+    "@vitejs/plugin-react": "^4.3.2"
   }
 }
