--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "vaubia",
-  "version": "1.0.0",
   "private": true,
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port 4173"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
-    "vite": "^5.4.9",
-    "@vitejs/plugin-react": "^4.3.2"
+    "vite": "^5.4.10",
+    "@vitejs/plugin-react": "^4.2.1"
   }
 }
