--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,26 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/assets/(.*)",
+      "dest": "/assets/$1"
+    },
+    {
+      "src": "/(.*)\\.(js|css|svg|png|jpg|ico)",
+      "dest": "/$1.$2"
+    },
+    {
+      "src": "/.*",
+      "dest": "/"
+    }
+  ]
 }
